# gm_work

./: .gitignore  README.md
NOTE/: Base ptr = new Derived()&Drived ptr = new Derived().docx  C++中继承和隐私.docx  RLD.docx  auto_shared_ptr_make_shared.docx  claude_teach_gm.html  cmakelist.txt  def_main作用.docx  git.docx  humble3.docx  humble4.docx  joint_state&robot_state.docx  mcu_RAM+ROM.docx  python换行.docx  py四大容器.docx  rdkx5.docx  ros2_humble _2.docx  ros2_humble_1.docx  vim.docx  中断不可加延时的两个原因.docx  单片机晶振.docx  头文件.docx  指针和虚函数原理.docx  智能指针和独占智能指针.docx  构造函数和析构.docx  标准.docx  类初始化.docx
NOTE/模电/: 差分放大电路.docx
NOTE/硬件/: f4_core.docx  焊接.docx
NOTE/通信/: iic.docx  spi.docx  uart.docx
PROJECT/2026嵌赛/: README.md
PROJECT/2026嵌赛/gm_car/colcon_ws/: cmd.txt
PROJECT/2026嵌赛/gm_car/colcon_ws/src/gm_4dof/: package.xml  setup.py
PROJECT/2026嵌赛/gm_car/colcon_ws/src/gm_4dof_interfaces/: CMakeLists.txt  package.xml
PROJECT/2026嵌赛/gm_car/colcon_ws/src/gm_car_interfaces/: package.xml
PROJECT/2026嵌赛/gm_car_2diff/Core/Inc/: stm32f4xx_hal_conf.h  tim.h
PROJECT/2026嵌赛/gm_car_2diff/Core/Src/: adc.c  dma.c  usart.c
PROJECT/2026嵌赛/gm_car_2diff/MDK-ARM/lhl_car/: lhl_car_lhl_car.dep
PROJECT/2026嵌赛/gm_car_2diff/gmcode/: adc_dma.c  buzzer.c  buzzer.h  extre.h  key.h  kinematic.c  msg.h  myserial.h
PROJECT/2026嵌赛/小车模型/: 万向轮连接.SLDPRT  相机架.SLDPRT  雷达座.SLDPRT
PROJECT/gm_car(2026.7_fin)/: README.md
PROJECT/gm_car(2026.7_fin)/RDK_X5端/gm_car/: all_command
PROJECT/gm_car(2026.7_fin)/小车模型/: 外壳下v3.step.SLDPRT  支柱.SLDPRT  球.SLDPRT  顶盖2.SLDPRT
PROJECT/gm_car(2026.7_fin)/底盘固件与MICRO-ROS/lhl_car_2diff/: lhl_car.ioc
PROJECT/gm_car(2026.7_fin)/底盘固件与MICRO-ROS/lhl_car_2diff/gmcode/: adc_dma.h  extre.c  key.c  kinematic.h  led.c  led.h  motor.c  motor.h  msg.c  myserial.c
PROJECT/gm_car(2026.7_fin)/底盘固件与MICRO-ROS/my_robot/: main_6DOF_backup.cpp  platformio.ini
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/: create_dirs_new.sh
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/camera_llm_description/: package.xml  setup.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/camera_llm_description/camera_llm_description/: camera_llm_node.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/custom_sensevoice_ros2/: package.xml  setup.cfg  setup.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/custom_sensevoice_ros2/custom_sensevoice_ros2/: car_control_node.py  master_controller.py  sensevoice_asr_node.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/custom_sensevoice_ros2/launch/: sensevoice_car_launch.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/gm_robot_bringup/: CMakeLists.txt
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/gm_robot_bringup/config/: cartographer.lua  config.rviz  slam_toolbox_params.yaml
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/gm_robot_bringup/launch/: bringup_cartographer.py  bringup_cartographer_raw.py  bringup_slamtool_raw.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_car_control/: package.xml  setup.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_car_control/config/: car_config.yaml
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_car_control/launch/: car_core.launch.py  yolo8_launch.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_car_control/llm_car_control/: control_node.py  llm_node.py  vision_parser.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_control/: package.xml  setup.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_control/config/: config.yaml
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_control/launch/: llm_control_launch.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_control/llm_control/: llm_yolo_car.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/llm_control/scripts/: llm_yolo_car.py  llm_yolo_car_old.py  start_hobot.sh
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/voice_control_car/: package.xml  setup.cfg  setup.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/voice_control_car/config/: config.yaml
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/voice_control_car/launch/: voice_control_launch.py
PROJECT/gm_car(持续更新中)/RDK_X5端/gm_car/src/voice_control_car/voice_control_car/: asr_node.py  control_node.py  llm_node.py  tts_node.py
PROJECT/gm_car(持续更新中)/小车模型/: 520电机支架.step.SLDPRT  520编码器电机.step.SLDPRT  65mm轮胎+联轴器.SLDASM  外壳上v3.step.SLDPRT  底盘 - 副本.SLDPRT  相机_改.SLDPRT
PROJECT/gm_car(持续更新中)/底盘固件与MICRO-ROS/my_robot/src/: main.cpp
PROJECT/gm_car(持续更新中)/底盘模型与固件/lhl_car_2diff/: lhl_car.ioc
PROJECT/gm_car(持续更新中)/底盘模型与固件/lhl_car_2diff/gmcode/: motor.c  motor.h
PROJECT/micro-ros机械臂pcb与代码（2026.3_fin）/: README.md
PROJECT/micro-ros机械臂pcb与代码（2026.3_fin）/ESP32端/my_robot/: main_6DOF_backup.cpp  platformio.ini
PROJECT/micro-ros机械臂pcb与代码（2026.3_fin）/ESP32端/my_robot/src/: main.cpp
PROJECT/stm32f407核心板pcb（2026.1_fin）/: README.md
PROJECT/巡检小车代码（2025.7_fin）/: README.md  Serial.py
PROJECT/巡检小车代码（2025.7_fin）/car_dht/: Project.uvprojx
PROJECT/巡检小车代码（2025.7_fin）/car_dht/Hardware/: AD.c  OLED_Data.h  Serial.c  dht11.c  sys.c  ultrasonic.c  ultrasonic.h
PROJECT/巡检小车代码（2025.7_fin）/car_dht/Listings/: startup_stm32f10x_md.lst
PROJECT/巡检小车代码（2025.7_fin）/car_dht/Objects/: Project.axf  Project_Target 1.dep
PROJECT/巡检小车代码（2025.7_fin）/car_dht/System/: Delay.c
PROJECT/巡检小车代码（2025.7_fin）/car_dht/User/: main.c
PROJECT/智能储物柜代码(2025.2_fin）/: README.md
PROJECT/智能储物柜代码(2025.2_fin）/智能储物柜/智能储物柜/: Project.uvprojx
PROJECT/智能储物柜代码(2025.2_fin）/智能储物柜/智能储物柜/Hardware/: CountSensor.c  CountSensor.h  MyI2C.c  OLED_Data.c  PWM.c  PWM.h  Serial.c  Serial.h  buzz.c  buzz.h  dht11.h  menu.c  menu.h  motor.c  motor.h  servo.c  servo.h  touch.c  touch.h
PROJECT/智能储物柜代码(2025.2_fin）/智能储物柜/智能储物柜/Listings/: startup_stm32f10x_md.lst
PROJECT/智能储物柜代码(2025.2_fin）/智能储物柜/智能储物柜/Objects/: Project_Target 1.dep
PROJECT/智能储物柜代码(2025.2_fin）/智能储物柜/智能储物柜/System/: MyFLASH.c  Store.c
PROJECT/智能储物柜代码(2025.2_fin）/智能储物柜/智能储物柜/User/: main.c
PROJECT/脑电pcb与代码(2026.4_fin)/BCI_Code/src/: example.txt  main.cpp
PROJECT/脑电pcb与代码(2026.6_fin)/: README.md
PROJECT/脑电pcb与代码(2026.6_fin)/BCI_Code/: platformio.ini  plotter.py
PROJECT/脑电pcb与代码(2026.6_fin)/BCI_Code/src/: example.txt  main.cpp  main_wifi.cpp
(+623 files in other folders)
