<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_control</name>
  <version>0.0.1</version>
  <description>LLM-based intelligent car control with YOLO vision</description>
  <maintainer email="sunrise@example.com">sunrise</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>
  <exec_depend>python3-llama-cpp</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
